# tise_solver

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
fortran/: fort.18  harmonic.f  readme.txt
matlab/: get_p_1W.m  get_p_2W.m
results/: numerov_vs_marsiglio.csv
src/: harmonic_numpy.py
src/fortran_code/: fort.16  fort.17
src/tise_solver/: benchmark.py  convergence.py  get_p_2W.py  harmonic.py  marsiglio.py  numerov.py  one_well_analytic.py  potentials.py
tests/: test_n_square_wells.py  test_potentials.py
tests/get_p_2W/: get_p_2W.mat  test_get_p_2W.py
tests/harmonic/: test_harmonic.py
tests/marsiglio/: test_marsiglio.py
tests/numerov/: get_p_1W.mat  get_p_2W.mat  test_numerov.py
