[metadata]
name = tise_solver
author = David Turner, Lena Rosendahl, Frank Marsiglio
author_email = dmturner@princeton.edu
maintainer = David Turner
maintainer_email = dmturner@princeton.edu
url = https://github.com/davidt0x/tise_solver
description = Various codes for solving the time independent Schrödinger equation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    numpy >=1.13.3
    scipy
    pandas
    matplotlib
    seaborn

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
junit_family=xunit2
addopts = --benchmark-disable -Wd --strict-markers
xfail_strict = True
testpaths =
    tests
required_plugins =
    pytest-benchmark

[flake8]
max-line-length = 80
max-complexity = 13
select = C, E, F, W, B, B9, T
ignore = E203, E231, E501, E722, W503, B950
per-file-ignores =
    tests/*: T
    examples/*: T
    notebooks/*: T
    docs/*: T
    scripts/*: T
    setup.py: T
    setup_helpers.py: C901

[mypy]
warn_unused_configs = True
warn_unused_ignores = True
pretty = True
python_version = 3.5
files = src
# check_untyped_defs = True


[mypy-numpy]
ignore_missing_imports = True

[mypy-boost_histogram._core]
ignore_missing_imports = True

[mypy-boost_histogram._core.*]
ignore_missing_imports = True

[check-manifest]
ignore =
  .all-contributorsrc
  .clang-format
  .pre-commit-config.yaml
  .pre-commit-nodocker.yaml
  .readthedocs.yml
  .clang-tidy
  examples/**
  notebooks/**
  docs/**
  scripts/**
  dev-requirements.txt
  CONTRIBUTING.md
  tests/.pytest_cache/**
